--- a/API-PathCarrer/pom.xml
+++ b/API-PathCarrer/pom.xml
@@ -59,6 +59,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+
+
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jdk8</artifactId>
+			<version>2.18.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
