--- a/API-PathCarrer/src/main/resources/application.properties
+++ b/API-PathCarrer/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=API-PathCarrer
 spring.data.mongodb.uri=mongodb://127.0.0.1:27017
 spring.data.mongodb.database=PrimeiroTeste
 
+secret.algorithm=13245
+
