Implementação parcial do swagger

--- a/API-PathCarrer/src/main/resources/application.properties
+++ b/API-PathCarrer/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.data.mongodb.database=PrimeiroTeste
 
 secret.algorithm=13245
 
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+
+
