Deploy back-end OK

--- a/API-PathCarrer/src/main/resources/application.properties
+++ b/API-PathCarrer/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=API-PathCarrer
-spring.data.mongodb.uri=mongodb://127.0.0.1:27017
-spring.data.mongodb.database=PrimeiroTeste
 
-secret.algorithm=13245
+spring.data.mongodb.uri=${MongoURI}
+
+spring.data.mongodb.database=${DataBase_name:PathToCarrer}
+
+secret.algorithm=${secretAlgorithm:4009876498498196}
+
 
