Ajustes em variaveis de ambiente

--- a/API-PathCarrer/src/main/resources/application.properties
+++ b/API-PathCarrer/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=API-PathCarrer
 
-spring.data.mongodb.uri=${MongoURI}
+server.port=${PORT:8080}
+spring.data.mongodb.uri=${MONGO_URI}
+spring.data.mongodb.database=${MONGO_DB}
 
-spring.data.mongodb.database=${DataBase_name:PathToCarrer}
-
-secret.algorithm=${secretAlgorithm:4009876498498196}
+secret.algorithm=${SECRET_ALGO:4009876498498196}
 
 
