--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ server.port=${PORT:8080}
 spring.data.mongodb.uri=${MONGO_URI}
 spring.data.mongodb.database=${MONGO_DB}
 
+cors.client=${CORS_CLIENT}
+
 secret.algorithm=${SECRET_ALGO:40098764984985541956}
 
 
