--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=API-PathCarrer
 
 server.port=${PORT:8080}
-spring.data.mongodb.uri=${MONGO_URI}
-spring.data.mongodb.database=${MONGO_DB}
+spring.data.mongodb.uri=${MONGO_URI:mongodb://127.0.0.1:27017}
+spring.data.mongodb.database=${MONGO_DB:PrimeiroTeste}
 
-cors.client=${CORS_CLIENT}
+cors.client=${CORS_CLIENT:http://localhost:5173}
 
 secret.algorithm=${SECRET_ALGO:40098764984985541956}
-
+default.Path.user=${PATHID_DEFAULT_NEWUSER}
 
