Inicio da documentaçaõ via swagger, S Login e Author feitas. Otimização da chamada do DB feita em GetPath

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.data.mongodb.database=${MONGO_DB:PrimeiroTeste}
 cors.client=${CORS_CLIENT:http://localhost:5173}
 
 secret.algorithm=${SECRET_ALGO:40098764984985541956}
-default.Path.user=${PATHID_NEWUSER}
+default.Path.user=${PATHID_NEWUSER:12345}
 
